Added insertItemAt and insertFluidAt to the item and fluid holders